Fixed: CSS cleanup
Fixed controls in fullscreen overlapping and overflowing the fullscreen controls panel. Also moved jump to page controls to be inline with the rest of the toolbar.

--- a/source/css/diva.less
+++ b/source/css/diva.less
@@ -50,10 +50,8 @@
         }
 
         &.in-fullscreen {
-            float: right;
-            padding-top: 10px;
-            text-align: right;
-            clear: both;
+            float: left;
+            clear: none;
         }
     }
 
@@ -85,14 +83,17 @@
             text-align: right;
             padding-right: 4px;
             white-space: nowrap;
+            line-height: 32px;
 
             .diva-page-label {
-                padding-top: 2px;
-                padding-right: 2px;
+                float: left;
+                padding-top: 1px;
+                padding-right: 0.5em;
+                line-height: 32px;
             }
 
             .diva-goto-form {
-                text-align: right;
+                float: right;
 
                 .diva-input {
                     width: 30px;
@@ -110,10 +111,31 @@
         right: 30px;
         z-index: @fullscreenZIndex + 1;
         width: 210px;
-        padding: 15px 15px 10px 15px;
+        height: 73px;
+        padding: 15px;
         .frame(@toolsFrame);
         background: @toolsBg;
         .pretty-shadow;
+
+        .diva-buttons-label {
+            margin-top: 5px;
+            padding: 0;
+            float: none;
+        }
+        .diva-page-nav {
+            float: none;
+            line-height: 1em;
+
+            .diva-goto-form {
+                margin-top: 9px;
+            }
+
+            .diva-page-label {
+                float: none;
+                clear: both;
+                line-height: 1em;
+            }
+        }
     }
 }
 
